--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "@vicons/fluent": "^0.12.0",
     "@vicons/ionicons5": "^0.12.0",
     "@vicons/material": "^0.12.0",
+    "@vicons/tabler": "^0.12.0",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vueuse/core": "^10.7.2",
     "dayjs": "^1.11.10",
