--- a/Dockerfile.agent
+++ b/Dockerfile.agent
@@ -1,9 +1,16 @@
 FROM golang:1.21 as builder
 
+ARG proxy
+
 WORKDIR /app
 ADD . .
 
-RUN go build -ldflags="-s -w" -o ./dist/pst-agent main.go
+RUN if [ ! -z "$proxy" ]; then \
+    export GOPROXY=https://goproxy.io,direct && \
+    go build -ldflags="-s -w" -o ./dist/pst-agent main.go; \
+    else \
+    go build -ldflags="-s -w" -o ./dist/pst-agent main.go; \
+    fi
 
 FROM scratch as runtime
 
