--- a/Dockerfile.agent
+++ b/Dockerfile.agent
@@ -1,4 +1,4 @@
-FROM golang:1.21 as builder
+FROM golang:1.21-alpine as builder
 
 ARG proxy
 
@@ -12,12 +12,11 @@ RUN if [ ! -z "$proxy" ]; then \
     go build -ldflags="-s -w" -o ./dist/pst-agent cmd/pst-agent/main.go; \
     fi
 
-FROM scratch as runtime
+FROM alpine as runtime
 
 WORKDIR /app
 
 COPY --from=builder /app/dist/pst-agent /app/pst-agent
 
-
 EXPOSE 8081
-ENTRYPOINT [ "pst-agent" ]
+ENTRYPOINT [ "pst-agent", "--port", "8081" ]
