--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -44,6 +44,7 @@ jobs:
           linux/amd64
           linux/arm64
         push: true
+        build-args: version=v${{ steps.output-id.outputs.v }}
         tags: |
           ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.output-id.outputs.v }}
           ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
