--- a/.github/workflows/docker-image-agent.yml
+++ b/.github/workflows/docker-image-agent.yml
@@ -37,7 +37,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./Dockerfile
+          file: ./Dockerfile.agent
           platforms: |
             linux/amd64
             linux/arm64
