--- a/Dockerfile.sa
+++ b/Dockerfile.sa
@@ -12,17 +12,31 @@ RUN if [ ! -z "$proxy" ]; then \
     go build -ldflags="-s -w" -o ./dist/pst-agent cmd/pst-agent/main.go; \
     fi
 
-FROM thijsvanloef/palworld-server-docker:latest
+FROM thijsvanloef/palworld-server-docker:v0.20
 
 WORKDIR /home/steam/server
 
 ENV AGENT_PORT 8081
 
+RUN sed -i '/# Configure RCON settings/i \
+(\n\
+    while :; do\n\
+        LEVEL_SAV_PATH=$(find \/palworld\/Pal\/Saved\/SaveGames\/0 -name "Level.sav")\n\
+        if [ -f "$LEVEL_SAV_PATH" ]; then\n\
+            echo "******STARTING PST-AGENT******"\n\
+            nohup pst-agent -f $LEVEL_SAV_PATH > \/palworld\/pst-agent.log 2>&1 &\n\
+            break  # Exit the loop once pst-agent is started\n\
+        else\n\
+            echo "[PST-AGENT] Waiting for Level.sav to appear..."\n\
+            sleep 30  # Wait for 30 seconds before checking again\n\
+        fi\n\
+    done\n\
+) &\n' start.sh
+
+
 COPY --from=builder /app/dist/pst-agent /usr/local/bin
-COPY ./script/agent_server_init.sh /home/steam/server/init.sh
 
 RUN chmod +x /usr/local/bin/pst-agent
-RUN chmod +x /home/steam/server/init.sh
 
-EXPOSE ${PORT} ${RCON_PORT} 8081
+EXPOSE ${PORT} ${RCON_PORT} ${AGENT_PORT}
 ENTRYPOINT ["/home/steam/server/init.sh"]
