--- a/web/package.json
+++ b/web/package.json
@@ -27,18 +27,20 @@
     "pinia": "^2.1.7",
     "unocss": "^0.58.4",
     "unplugin-auto-import": "^0.17.5",
-    "unplugin-vue-components": "^0.26.0",
+    "vant": "^4.8.4",
     "vue": "^3.3.11",
     "vue-i18n": "^9.9.0",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
+    "@vant/auto-import-resolver": "^1.0.2",
     "@vitejs/plugin-vue": "^4.6.2",
     "@vue/eslint-config-prettier": "^8.0.0",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "prettier": "^3.0.3",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.10"
   }
 }
