--- a/example/config.yaml
+++ b/example/config.yaml
@@ -5,12 +5,19 @@ web:
   cert_path: ""
   key_path: ""
   public_url: ""
+api:
+  mode: rest
+  sync_interval: 60
 rcon:
   address: "127.0.0.1:25575"
   password: ""
   is_palguard: false
   timeout: 5
-  sync_interval: 60
+rest:
+  address: "http://127.0.0.1:8212"
+  username: "admin"
+  password: ""
+  timeout: 5
 save:
   path: "/path/to/your/Pal/Saved"
   decode_path: ""
