--- a/example/config.yaml
+++ b/example/config.yaml
@@ -25,3 +25,6 @@ save:
   backup_interval: 14400
 manage:
   kick_non_whitelist: false
+  player_logging: false
+  player_login_message: "Player {username} has joined the server! Current online player count: {online_num}."
+  player_logout_message: "Player {username} has left the server! Current online player count: {online_num}."
