--- a/example/config.yaml
+++ b/example/config.yaml
@@ -5,9 +5,11 @@ web:
   cert_path: ""
   key_path: ""
   public_url: ""
-api:
-  mode: rest
+task:
   sync_interval: 60
+  player_logging: false
+  player_login_message: "Player {username} has joined the server! Current online player count: {online_num}."
+  player_logout_message: "Player {username} has left the server! Current online player count: {online_num}."
 rcon:
   address: "127.0.0.1:25575"
   password: ""
@@ -25,6 +27,3 @@ save:
   backup_interval: 14400
 manage:
   kick_non_whitelist: false
-  player_logging: false
-  player_login_message: "Player {username} has joined the server! Current online player count: {online_num}."
-  player_logout_message: "Player {username} has left the server! Current online player count: {online_num}."
