添加REST API支持，添加解BAN功能 (#198)
* 添加REST API支持，添加解BAN功能

* 少改了一点东西

* 又又又少改了一点东西

* 新增玩家进入/离开服务器时广播消息功能

* 解决REST API在玩家登录过程中获取PlayerId为None问题

解决玩家进入/离开广播内容多行时顺序错乱问题

* 临时处理游戏REST API返回PlayerId为负数的BUG

* 去除RCON支持，面板与游戏通讯仅保留REST API
补充了README中Docker相关文档

* 修复local和agent方式获取存档时带有游戏备份文件的问题

* 小改了一下代码顺序

* 修复docker方式获取存档时带有游戏备份文件的问题

--- a/example/config.yaml
+++ b/example/config.yaml
@@ -5,12 +5,21 @@ web:
   cert_path: ""
   key_path: ""
   public_url: ""
+task:
+  sync_interval: 60
+  player_logging: false
+  player_login_message: "Player {username} has joined the server! Current online player count: {online_num}."
+  player_logout_message: "Player {username} has left the server! Current online player count: {online_num}."
 rcon:
   address: "127.0.0.1:25575"
   password: ""
   is_palguard: false
   timeout: 5
-  sync_interval: 60
+rest:
+  address: "http://127.0.0.1:8212"
+  username: "admin"
+  password: ""
+  timeout: 5
 save:
   path: "/path/to/your/Pal/Saved"
   decode_path: ""
